sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:4: error: not found: value getNombraValeurs
	var length = getNombraValeurs();
                     ^