sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	var swaped = true;
	var length = getNombraValeurs();
	var i = 0;
	do{
	
		
	}while(swaped);
}
